--- a/style.css
+++ b/style.css
@@ -294,12 +294,15 @@
   color: var(--black);
 }
 
-.amigrumi__count .increase {
+.increase {
   margin-left: 5px;
+  cursor: pointer !important;
+  color: var(--purple) !important;
 }
 
 .amigrumi__count .decrease {
   margin-right: 5px;
+  cursor: pointer;
 }
 
 .amigrumi__count .increase,
